Fixes submit button on iOS and since i'm feeling extra productive, it also fixes that thing on iOS where the white two column layout caused the document body to be wider than the viewport.

--- a/site/_less/layouts/action-network-petitions/index.less
+++ b/site/_less/layouts/action-network-petitions/index.less
@@ -97,14 +97,17 @@
   }
 
   [type="submit"] {
+    appearance: none;
     background-color: @red-100;
     border: none;
+    border-radius: 0;
     color: @white;
     cursor: pointer;
     font-family: @body-font;
     font-size: 2.4rem;
     font-weight: 400;
     letter-spacing: 1px;
+    margin-bottom: 0;
     padding: 1.4rem 0;
     text-transform: uppercase;
     transition: background-color 300ms, bottom 100ms;
